--- a/space-walk-client/src/App.css
+++ b/space-walk-client/src/App.css
@@ -15,6 +15,7 @@
 
 .App-header {
   background-color: #282c34;
+  background-image: url("https://media.giphy.com/media/idwHsrrEkqQws34iPk/giphy.gif");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
